--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,13 +12,20 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.10", "3.11", "3.12"]
-        django-version: ["4.2", "5.0"]
-        wagtail-version: ["6.0", "6.3"]
+        python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
+        django-version: ["4.2", "5.1", "5.2"]
+        wagtail-version: ["7.0", "7.1", "7.2"]
         exclude:
-          # Add version exclusions as needed
-          - django-version: "5.0"
-            wagtail-version: "5.2"
+          # Python 3.14 only supported in Wagtail 7.2+
+          - python-version: "3.14"
+            wagtail-version: "7.0"
+          - python-version: "3.14"
+            wagtail-version: "7.1"
+          # Django 4.2 only supports up to Python 3.12
+          - python-version: "3.13"
+            django-version: "4.2"
+          - python-version: "3.14"
+            django-version: "4.2"
 
     steps:
       - uses: actions/checkout@v4
